--- a/arch/arm64/configs/exynos7885-a20e_defconfig
+++ b/arch/arm64/configs/exynos7885-a20e_defconfig
@@ -45,9 +45,9 @@ CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
 CONFIG_LOCALVERSION=""
 CONFIG_LOCALVERSION_AUTO=y
-CONFIG_DEFAULT_HOSTNAME="(none)"
+CONFIG_DEFAULT_HOSTNAME="(kali)"
 CONFIG_SWAP=y
-# CONFIG_SYSVIPC is not set
+# CONFIG_SYSVIPC=y
 # CONFIG_POSIX_MQUEUE is not set
 CONFIG_CROSS_MEMORY_ATTACH=y
 # CONFIG_FHANDLE is not set
@@ -346,13 +346,13 @@ CONFIG_ARCH_EXYNOS=y
 CONFIG_SOC_EXYNOS7885=y
 # CONFIG_SOC_EXYNOS7885_ANDROID_VERSION_O is not set
 CONFIG_SOC_EXYNOS7885_ANDROID_VERSION_P=y
-# CONFIG_SOC_EXYNOS7885_ANDROID_VERSION_Q is not set
+# CONFIG_SOC_EXYNOS7885_ANDROID_VERSION_Q=y
 # CONFIG_SOC_EXYNOS7885_ANDROID_VERSION_Q_MR is not set
 # CONFIG_SOC_EXYNOS7885_ANDROID_VERSION_P_MR is not set
 # CONFIG_SOC_EXYNOS7884 is not set
 # CONFIG_SOC_EXYNOS7883 is not set
 CONFIG_SOC_EXYNOS7884A=y
-CONFIG_ARCH_EXYNOS7=y
+CONFIG_ARCH_EXYNOS7=n
 # CONFIG_SOC_EXYNOS8890 is not set
 # CONFIG_SOC_EXYNOS8895 is not set
 # CONFIG_SOC_EMULATOR8895 is not set
